k8s/hardening/grafana-readonly.yaml
###############################################################################
# Grafana Deployment Patch
# Use this to inject the hardening ConfigMap into an existing Grafana deployment.
#
# Apply:
#   kubectl patch deployment grafana -n robo-stack-prod --patch-file k8s/hardening/grafana-readonly.yaml
#
# Or reference via kustomize strategic merge patch.
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: robo-stack-prod
spec:
  template:
    spec:
      containers:
        - name: grafana
